<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>42</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.jmockit</groupId>
    <artifactId>jmockit-parent</artifactId>
    <version>1.51.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jmockit-parent</name>
    <description>Parent POM for JMOCKIT</description>

    <modules>
        <module>coverageTests</module>
        <module>main</module>
        <module>samples</module>
    </modules>

    <scm>
        <url>https://github.com/hazendaz/jmockit1</url>
        <connection>scm:git:https://github.com/hazendaz/jmockit1</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>gh-pages-scm</name>
            <url>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>
        <!-- Set on purpose as this repo will fail if moved up to 11 currently for anything < jdk 13 -->
        <javadoc.java.release.version>8</javadoc.java.release.version>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1696795922</project.build.outputTimestamp>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.jmockit.parent</module.name>

        <!-- Surefire Argline -->
        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.51.0/jmockit-1.51.0.jar</argLine>

        <!-- Override jacoco plugin to latest -->
        <jacoco.plugin>0.8.11</jacoco.plugin>
    </properties>

    <profiles>
        <profile>
            <id>jdk17on</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.51.0/jmockit-1.51.0.jar --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                <!-- Javadoc Release is strict due to maven bug and automatic module naming; it needs extra help, see examples (note: done on jdk 17 only as broken until jdk 13 and not backported) -->
                <javadoc.java.release.version>11</javadoc.java.release.version>
            </properties>
        </profile>
    </profiles>

</project>
